# VDT-2006-HPC-SPI

./: .gitattributes  .gitignore  README.md  meson.build  spi_rules.conf
docs/: all_hpc_projects_overview.md  build_environment_specification.md  operating_system_specification.md  project_specification_english_version.md  project_specification_vietnamese_version.md  system_architecture_report.md  system_hardware_specifications.md  testcase_specification.csv
scripts/setup_dependencies/: README.md  install_dependencies.sh  verify_dependencies.sh
scripts/setup_dpdk/: README.md  setup_dpdk.sh  verify_setup_dpdk.sh
scripts/setup_hugepages/: README.md  setup_hugepages.sh  verify_setup_hugepages.sh
scripts/setup_hyperscan/: README.md  setup_hyperscan.sh  verify_setup_hyperscan.sh
scripts/setup_python/: README.md  setup_venv.sh
scripts/setup_wireshark_samples/: README.md  download_wireshark_samples.sh  verify_pcap.sh
scripts/test_setup/: README.md  test_setup.sh
src/: common.h  control.c  control.h  main.c  master.c  master.h  matcher.c  matcher.h  parser.h  spi_cli.c  stats.c  stats.h  worker.c  worker.h
tests/analyze_pcap/: analyze_pcap.py
tests/gen_tests/: gen_balanced_traffic.py  gen_func_test.py  gen_unbalanced_traffic.py
tests/judge/: README.md  check_correctness.py  run_benchmark_native.sh  run_benchmark_tcpreplay.sh  run_check_correctness.sh  run_get_raw_throughput.sh  run_project_native.sh  run_project_tcpreplay.sh
